--- a/public/index.html
+++ b/public/index.html
@@ -1,81 +1,177 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
+
+  <link rel="shortcut icon" type="x-icon" href="null">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
+
     body {
+
       display: flex;
-      flex-direction: column;
+
+      flex-direction: column; /* Stack items vertically */
+
       align-items: center;
+
       justify-content: center;
+
       height: 100vh;
+
       margin: 0;
-      background-color: black;
+
+      background-image: url("https://graph.org/file/4101abbb3268b5788c2b7.jpg"); /* Set the background image */
+
+      background-repeat: no-repeat;
+
+      background-position: center;
+
+      background-size: cover;
+
     }
+
+
 
     .btn {
-      --color: #00A97F;
-      --color2: rgb(10, 25, 30);
-      width: 200px;
+
+      --color: hsl(0, 0%, 0%);
+
+      --color2: rgb(255, 0, 255);
+
+      width: 200px; /* Set a fixed width for the buttons */
+
       padding: 0.8em 1.75em;
-      background-color: transparent;
+
+      background-color: white;
+
       border-radius: 6px;
-      border: .3px solid var(--color);
+
+      border: .3px black;
+
       transition: .5s;
+
       position: relative;
+
       overflow: hidden;
+
       cursor: pointer;
+
       z-index: 1;
+
       font-weight: 300;
+
       font-size: 17px;
+
       font-family: 'Roboto', 'Segoe UI', sans-serif;
+
       text-transform: uppercase;
+
       color: var(--color);
+
       margin-bottom: 10px; /* Add margin to separate buttons */
+
     }
+
+
 
     .btn::after, .btn::before {
+
       content: '';
+
       display: block;
+
       height: 100%;
+
       width: 100%;
+
       transform: skew(90deg) translate(-50%, -50%);
+
       position: absolute;
+
       inset: 50%;
+
       left: 25%;
+
       z-index: -1;
+
       transition: .5s ease-out;
-      background-color: var(--color);
+
+      background-color: var(--white);
+
     }
+
+
 
     .btn::before {
+
       top: -50%;
+
       left: -25%;
+
       transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
+
     }
+
+
 
     .btn:hover::before {
+
       transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
+
     }
+
+
 
     .btn:hover::after {
+
       transform: skew(45deg) translate(-50%, -50%);
+
     }
+
+
 
     .btn:hover {
-      color: var(--color2);
+
+      color: white;
+
     }
 
+
+
     .btn:active {
-      filter: brightness(.7);
+
+      filter: brightness(.9);
+
       transform: scale(.98);
+
     }
+
   </style>
+
 </head>
+
 <body>
-  <button onclick="window.open(`/qr`)" class="btn">QR Code</button>
-  <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`/update-session`)" class="btn">Update Session</button>
+
+
+
+  <button onclick="window.open(`/pair`)" class="btn">PAIR CODE</button>
+
+  <button onclick="window.open(`/qr`)" class="btn">QR CODE</button>
+
+  <button onclick="window.open(`/update-session`)" class="btn">UPADTE SESSION</button>
+
+  <button onclick="window.open(`https://github.com/godzenitsu/QUEEN-NEZUKO-`)" class="btn">GITHUB</button>
+
+  <button onclick="window.open(`https://www.instagram.com/whoois.zenitsu`)" class="btn">INSTAGRAM</button>
+
+
+
 </body>
+
 </html>
