--- a/public/qr.html
+++ b/public/qr.html
@@ -4,7 +4,7 @@
             crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WHATSAPP BOT QR SCANER</title>
+    <title>NEZUKO MD QR SCAN</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
     <title>QR</title>
     <style>
@@ -164,7 +164,7 @@
             <img id="qr-image" src="/qr-code" alt="QR CODE">
         </div>
         <div id="title-container">
-            <h2 id="main">WHATSAPP-BOT QR</h2>
+            <h2 id="main">-NEZUKO-WHATSAPP-BOT QR</h2>
             <p class="legend" id="legend">Scan The QR Code</p>
         </div>
         <div id="description-container">
