--- a/public/index.html
+++ b/public/index.html
@@ -1,177 +1,351 @@
 <!DOCTYPE html>
-
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NEZUKO | Session</title>
+    <meta property="og:image" content="https://i.imgur.com/02y6tEy.jpeg">
+    <meta property="og:title" content="Queen NEZUKO">
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 75vh;
+    flex-direction: column;
+    background: #000;
+  }
 
-<head>
+  #main {
+      text-align: center;
+  }
 
-  <meta charset="UTF-8">
+  h1 {
+      font-size: 200%;
+      color: #ffffff;
+  }
 
-  <link rel="shortcut icon" type="x-icon" href="null">
+  h3 {
+      font-weight: 200;
+      color: #ffffff;
+  }
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  h1, h3 {
+      letter-spacing: 0.05em;
+  }
 
-  <style>
+  .h {
+    font-family: "Montserrat Medium";
+    max-width: 40ch;
+    color: #ffffff;
+    position: relative;
+    text-align: top;
+    transform: scale(0.94);
+    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+  }
+  @keyframes scale {
+    100% {
+      transform: scale(1);
+    }
+  }
 
-    body {
+  span {
+    display: inline-block;
+    opacity: 0;
+    filter: blur(4px);
+  }
 
-      display: flex;
+  span:nth-child(1) {
+    animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      flex-direction: column; /* Stack items vertically */
+  span:nth-child(2) {
+    animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      align-items: center;
+  span:nth-child(3) {
+    animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      justify-content: center;
+  span:nth-child(4) {
+    animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      height: 100vh;
+  span:nth-child(5) {
+    animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      margin: 0;
+  span:nth-child(6) {
+    animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      background-image: url("https://graph.org/file/4101abbb3268b5788c2b7.jpg"); /* Set the background image */
+  span:nth-child(7) {
+    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      background-repeat: no-repeat;
+  span:nth-child(8) {
+    animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      background-position: center;
+  span:nth-child(9) {
+    animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
-      background-size: cover;
+  span:nth-child(10) {
+    animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
 
+  span:nth-child(11) {
+    animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+
+  span:nth-child(12) {
+    animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+
+  span:nth-child(13) {
+    animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+
+  span:nth-child(14) {
+    animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+
+  span:nth-child(15) {
+    animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+
+  span:nth-child(16) {
+    animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+
+  span:nth-child(17) {
+    animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+
+  span:nth-child(18) {
+    animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+
+  @keyframes fade-in {
+    100% {
+      opacity: 1;
+      filter: blur(0);
+    }
+  }
+
+
+  .btn {
+    --border-color: linear-gradient(-45deg, #ffae00, #7e03aa, #00fffb);
+    --border-width: .125em;
+    --curve-size: .5em;
+    --blur: 30px;
+    --bg: #080312;
+    --color: #afffff;
+    color: var(--color);
+      /* use position: relative; so that BG is only for .btn */
+    position: relative;
+    isolation: isolate;
+    display: inline-grid;
+    text-align: center;
+    place-content: center;
+    padding: .5em 1.5em;
+    font-size: 17px;
+    border: 0;
+    text-transform: uppercase;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, .6);
+    clip-path: polygon(
+              /* Top-left */
+              0% var(--curve-size),
+
+              var(--curve-size) 0,
+              /* top-right */
+              100% 0,
+              100% calc(100% - var(--curve-size)),
+
+              /* bottom-right 1 */
+              calc(100% - var(--curve-size)) 100%,
+              /* bottom-right 2 */
+              0 100%);
+    transition: color 250ms;
+  }
+
+  .btn::after,
+  .btn::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+  }
+
+  .btn::before {
+    background: var(--border-color);
+    background-size: 300% 300%;
+    animation: move-bg7234 5s ease infinite;
+    z-index: -2;
+  }
+
+  @keyframes move-bg7234 {
+    0% {
+      background-position: 31% 0%
     }
 
-
-
-    .btn {
-
-      --color: hsl(0, 0%, 0%);
-
-      --color2: rgb(255, 0, 255);
-
-      width: 200px; /* Set a fixed width for the buttons */
-
-      padding: 0.8em 1.75em;
-
-      background-color: white;
-
-      border-radius: 6px;
-
-      border: .3px black;
-
-      transition: .5s;
-
-      position: relative;
-
-      overflow: hidden;
-
-      cursor: pointer;
-
-      z-index: 1;
-
-      font-weight: 300;
-
-      font-size: 17px;
-
-      font-family: 'Roboto', 'Segoe UI', sans-serif;
-
-      text-transform: uppercase;
-
-      color: var(--color);
-
-      margin-bottom: 10px; /* Add margin to separate buttons */
-
+    50% {
+      background-position: 70% 100%
     }
 
+    100% {
+      background-position: 31% 0%
+    }
+  }
 
+  .btn::after {
+    background: var(--bg);
+    z-index: -1;
+    clip-path: polygon(
+              /* Top-left */
+              var(--border-width) 
+              calc(var(--curve-size) + var(--border-width) * .5),
 
-    .btn::after, .btn::before {
+              calc(var(--curve-size) + var(--border-width) * .5) var(--border-width),
 
-      content: '';
+              /* top-right */
+              calc(100% - var(--border-width)) 
+              var(--border-width),
 
-      display: block;
+              calc(100% - var(--border-width)) 
+              calc(100% - calc(var(--curve-size) + var(--border-width) * .5)),
 
-      height: 100%;
+              /* bottom-right 1 */
+              calc(100% - calc(var(--curve-size) + var(--border-width) * .5)) calc(100% - var(--border-width)),
+              /* bottom-right 2 */
+              var(--border-width) calc(100% - var(--border-width)));
+    transition: clip-path 500ms;
+  }
 
+  .btn:where(:hover, :focus)::after {
+    clip-path: polygon(
+                  /* Top-left */
+                  calc(100% - var(--border-width)) 
+
+                  calc(100% - calc(var(--curve-size) + var(--border-width) * 0.5)),
+
+                  calc(100% - var(--border-width))
+
+                  var(--border-width),
+
+                  /* top-right */
+                  calc(100% - var(--border-width))
+
+                   var(--border-width),
+
+                  calc(100% - var(--border-width)) 
+
+                  calc(100% - calc(var(--curve-size) + var(--border-width) * .5)),
+
+                  /* bottom-right 1 */
+                  calc(100% - calc(var(--curve-size) + var(--border-width) * .5)) 
+                  calc(100% - var(--border-width)),
+
+                  /* bottom-right 2 */
+                  calc(100% - calc(var(--curve-size) + var(--border-width) * 0.5))
+                  calc(100% - var(--border-width)));
+    transition: 200ms;
+  }
+
+  .btn:where(:hover, :focus) {
+    color: #fff;
+  }
+  .button {
+    width: 150px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 0px 15px;
+    background-color: red;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    position: relative;
+    cursor: pointer;
+    font-weight: 900;
+    transition-duration: .2s;
+    background: linear-gradient(0deg, #000, #272727);
+    left: 70px;
+  }
+
+  .button:before, .button:after {
+    content: '';
+    position: absolute;
+    left: -2px;
+    top: -2px;
+    border-radius: 10px;
+    background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00,#ffff00, #ff0000, #fb0094, 
+      #0000ff, #00ff00,#ffff00, #ff0000);
+    background-size: 400%;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    z-index: -1;
+    animation: steam 20s linear infinite;
+  }
+
+  @keyframes steam {
+    0% {
+      background-position: 0 0;
+    }
+
+    50% {
+      background-position: 400% 0;
+    }
+
+    100% {
+      background-position: 0 0;
+    }
+  }
+
+  .button:after {
+    filter: blur(50px);
+  }
+
+  footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
       width: 100%;
-
-      transform: skew(90deg) translate(-50%, -50%);
-
-      position: absolute;
-
-      inset: 50%;
-
-      left: 25%;
-
-      z-index: -1;
-
-      transition: .5s ease-out;
-
-      background-color: var(--white);
-
-    }
-
-
-
-    .btn::before {
-
-      top: -50%;
-
-      left: -25%;
-
-      transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
-
-    }
-
-
-
-    .btn:hover::before {
-
-      transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
-
-    }
-
-
-
-    .btn:hover::after {
-
-      transform: skew(45deg) translate(-50%, -50%);
-
-    }
-
-
-
-    .btn:hover {
-
-      color: white;
-
-    }
-
-
-
-    .btn:active {
-
-      filter: brightness(.9);
-
-      transform: scale(.98);
-
-    }
+      background-color: #000;
+      text-align: center;
+      padding: 10px;
+      color: #333;
+      font-size: 14px;
+  }
 
   </style>
+  </head>
+  <body>
+    <div id="main">
+      <br><br>
+      <h1 class="h">
+        <centre>
+        <span>Select <span>
+          <span>session <span>
+                <span>type <span>
+                </centre>
+      </span></span></span></span></span></span></h1>
+  <input hidden type="text" name="value" value="queen-izumi-md">
+        <br><br>
+        <button onclick="location.href='/qr'" class="button">Qr Code</button>
+        <br><br>
+      <button onclick="location.href='/pair'" class="button">Pair Code</button>
+        <br><br>
+      </form>
+      <button onclick="location.href='/update-session'" class="button">Update Session</button>
+    </div>
+    <footer>
+       <p>GOD-ZENITSU/</p>
+    </footer>
+  </body>
+  </html>
 
-</head>
-
-<body>
-
-
-
-  <button onclick="window.open(`/pair`)" class="btn">PAIR CODE</button>
-
-  <button onclick="window.open(`/qr`)" class="btn">QR CODE</button>
-
-  <button onclick="window.open(`/update-session`)" class="btn">UPADTE SESSION</button>
-
-  <button onclick="window.open(`https://github.com/godzenitsu/QUEEN-NEZUKO-`)" class="btn">GITHUB</button>
-
-  <button onclick="window.open(`https://www.instagram.com/whoois.zenitsu`)" class="btn">INSTAGRAM</button>
-
-
-
-</body>
-
-</html>
+ 
