--- a/public/pair.html
+++ b/public/pair.html
@@ -1,217 +1,196 @@
-
-
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-
-  <title>Pair with Nezuko</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-
-  <link rel="icon" href="https://i.imgur.com/QyfhhwM.png" type="image/png">
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/google-libphonenumber/3.2.33/libphonenumber.min.js" integrity="sha512-iIbEqa739HsmNzCNGHb64bF8bdhVw19PNYm6eFfNdzfUtIRmTA5hs8al4S5LbvBEwqZkDNJLTn9vDXwfZrNsxQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-<style>
-
-    @font-face {
-
-      font-family: 'Sequel 100';
-
-      src: url('sequel100.woff2') format('woff2'), /* Modern Browsers */
-
-           url('sequel100.woff') format('woff'); /* Older Browsers */
-
-      font-weight: bold;
-
-    }
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pair with Me</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <style>
     body {
-
-      background-color: black;
-
-      color: #fff;
-
-      overflow: hidden;
-
-      font-family: 'Sequel 100', sans-serif;
-
       display: flex;
-
       justify-content: center;
-
-      font-size: small;
-
       align-items: center;
-
       height: 100vh;
-
       margin: 0;
-
+      background: linear-gradient(to bottom, #ffffff, #ebebeb);
+      font-family: Arial, sans-serif;
     }
-
-
 
     .container {
-
-      max-width: 400px;
-
-      padding: 20px;
-
-      background-color: black;
-
-      border-radius: 10px;
-
-      box-shadow: 0 0 30px rgb(66, 209, 245, 0.4);
-
       display: flex;
-
       flex-direction: column;
-
       align-items: center;
-
     }
 
+    .box {
+      width: 300px;
+      height: 330px; /* Adjusted height */
+      padding: 20px;
+      position: relative;
+      text-align: center;
+      background-color: #fff;
+      border-radius: 10px;
+      transform: perspective(1000px) rotateY(0deg);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      position: relative;
+    }
 
+    #text {
+      color: #000; /* Set the text color to black (#000) */
+    }
+
+    .input-container input {
+      color: #000; /* Set the text color to black (#000) */
+    }
+
+    .centered-text {
+      color: #000; /* Set the text color to black (#000) */
+    }
 
     .input-container {
-
       display: flex;
-
-      align-items: center;
-
+      background: white;
+      border-radius: 1rem;
+      background: linear-gradient(45deg, #c5c5c5 0%, #ffffff 100%);
+      box-shadow: 20px 20px 20px #d8d8d8, -10px -10px 20px #f8f8f8;
+      padding: 0.3rem;
+      gap: 0.3rem;
+      max-width: 300px; /* Set your desired maximum width */
       width: 100%;
-
-      margin-bottom: 10px;
-
     }
 
-
-
-    select {
-
-      padding: 10px;
-
+    .input-container input {
+      border-radius: 0.8rem 0 0 0.8rem;
+      background: #e8e8e8;
+      box-shadow: inset 13px 13px 10px #dcdcdc, inset -13px -13px 10px #f4f4f4;
+      width: 89%;
+      flex-basis: 75%;
+      padding: 1rem;
       border: none;
-
-      border-radius: 5px;
-
-      background-color: #333;
-
-      color: #fff;
-
-      margin-right: 5px;
-
-      flex-shrink: 0;
-
+      border-left: 2px solid #4998FF;
+      color: #5e5e5e;
+      transition: all 0.2s ease-in-out;
     }
 
-
-
-    input[type="text"] {
-
-      flex-grow: 1;
-
-      padding: 10px;
-
-      border: none;
-
-      border-radius: 5px;
-
-      background-color: #333;
-
-      color: #fff;
-
-      font-family: 'Consolas', monospace;
-
+    .input-container input:focus {
+      border-left: 2px solid #4998FF;
+      outline: none;
+      box-shadow: inset 13px 13px 10px #BFF0FA, inset -13px -13px 10px #f4f4f4;
     }
 
-
-
-    button {
-
-      background-color: #42d1f5;
-
-      color: #000;
-
-      font-family: 'Sequel 100', sans-serif;
-
-      padding: 10px 0;
-
+    .input-container button {
+      flex-basis: 25%;
+      padding: 1rem;
+      background: linear-gradient(135deg, #BFF0FA 0%, #4998FF 100%);
+      font-weight: 900;
+      letter-spacing: 0.3rem;
+      text-transform: uppercase;
+      color: white;
       border: none;
-
-      border-radius: 5px;
-
-      cursor: pointer;
-
       width: 100%;
-
-      font-weight: bold;
-
+      border-radius: 0 1rem 1rem 0;
+      transition: all 0.2s ease-in-out;
     }
 
-
-
-    button:hover {
-
-      background-color: #000;
-
-      color: #b2dae2;
-
-      outline: 2px solid;
-
-      border-radius: 5px;
-
+    .input-container button:hover {
+      background: linear-gradient(135deg, #BFF0FA 0%, #4998ffc4 100%);
     }
 
+   @media (max-width: 500px) {
+      .input-container {
+        flex-direction: column;
+      }
 
+      .input-container input {
+        border-radius: 0.8rem;
+      }
 
-    #result {
-
-      margin-top: 20px;
-
-      color: #fff;
-
+      .input-container button {
+        padding: 1rem;
+        border-radius: 0.8rem;
+      }
     }
 
+    .centered-text {
+    text-align: center;
+   }
   </style>
-
 </head>
-
 <body>
-
   <div class="container">
-
-    <h2 align="center"><i>ENTER YOUR <a style="color: #42d1f5;">NUMBER</a></i></h2>
-
-    <div class="input-container">
-
-      <select id="countryCode">
-
-		<option value="1">+1</option><option value="7">+7</option><option value="20">+20</option><option value="27">+27</option><option value="30">+30</option><option value="31">+31</option><option value="32">+32</option><option value="33">+33</option><option value="34">+34</option><option value="36">+36</option><option value="39">+39</option><option value="40">+40</option><option value="41">+41</option><option value="42">+42</option><option value="43">+43</option><option value="44">+44</option><option value="45">+45</option><option value="46">+46</option><option value="47">+47</option><option value="48">+48</option><option value="49">+49</option><option value="51">+51</option><option value="52">+52</option><option value="53">+53</option><option value="54">+54</option><option value="55">+55</option><option value="56">+56</option><option value="57">+57</option><option value="58">+58</option><option value="60">+60</option><option value="61">+61</option><option value="62">+62</option><option value="63">+63</option><option value="64">+64</option><option value="65">+65</option><option value="66">+66</option><option value="81">+81</option><option value="82">+82</option><option value="84">+84</option><option value="86">+86</option><option value="90">+90</option><option value="91">+91</option><option value="92">+92</option><option value="94">+94</option><option value="95">+95</option><option value="98">+98</option><option value="212">+212</option><option value="213">+213</option><option value="216">+216</option><option value="218">+218</option><option value="220">+220</option><option value="221">+221</option><option value="222">+222</option><option value="223">+223</option><option value="224">+224</option><option value="226">+226</option><option value="227">+227</option><option value="228">+228</option><option value="229">+229</option><option value="231">+231</option><option value="232">+232</option><option value="233">+233</option><option value="234">+234</option><option value="236">+236</option><option value="237">+237</option><option value="238">+238</option><option value="239">+239</option><option value="240">+240</option><option value="241">+241</option><option value="242">+242</option><option value="244">+244</option><option value="245">+245</option><option value="248">+248</option><option value="249">+249</option><option value="250">+250</option><option value="251">+251</option><option value="252">+252</option><option value="253">+253</option><option value="254">+254</option><option value="256">+256</option><option value="257">+257</option><option value="258">+258</option><option value="260">+260</option><option value="261">+261</option><option value="262">+262</option><option value="263">+263</option><option value="264">+264</option><option value="265">+265</option><option value="266">+266</option><option value="267">+267</option><option value="268">+268</option><option value="269">+269</option><option value="290">+290</option><option value="291">+291</option><option value="297">+297</option><option value="298">+298</option><option value="299">+299</option><option value="350">+350</option><option value="351">+351</option><option value="352">+352</option><option value="353">+353</option><option value="354">+354</option><option value="356">+356</option><option value="357">+357</option><option value="358">+358</option><option value="359">+359</option><option value="370">+370</option><option value="371">+371</option><option value="372">+372</option><option value="373">+373</option><option value="374">+374</option><option value="375">+375</option><option value="376">+376</option><option value="377">+377</option><option value="378">+378</option><option value="379">+379</option><option value="380">+380</option><option value="381">+381</option><option value="385">+385</option><option value="386">+386</option><option value="387">+387</option><option value="389">+389</option><option value="417">+417</option><option value="421">+421</option><option value="500">+500</option><option value="501">+501</option><option value="502">+502</option><option value="503">+503</option><option value="504">+504</option><option value="505">+505</option><option value="506">+506</option><option value="507">+507</option><option value="509">+509</option><option value="590">+590</option><option value="591">+591</option><option value="592">+592</option><option value="593">+593</option><option value="594">+594</option><option value="595">+595</option><option value="596">+596</option><option value="597">+597</option><option value="598">+598</option><option value="670">+670</option><option value="671">+671</option><option value="672">+672</option><option value="673">+673</option><option value="674">+674</option><option value="675">+675</option><option value="676">+676</option><option value="677">+677</option><option value="678">+678</option><option value="679">+679</option><option value="680">+680</option><option value="681">+681</option><option value="682">+682</option><option value="683">+683</option><option value="686">+686</option><option value="687">+687</option><option value="688">+688</option><option value="689">+689</option><option value="691">+691</option><option value="692">+692</option><option value="850">+850</option><option value="852">+852</option><option value="853">+853</option><option value="855">+855</option><option value="856">+856</option><option value="880">+880</option><option value="886">+886</option><option value="960">+960</option><option value="961">+961</option><option value="962">+962</option><option value="963">+963</option><option value="964">+964</option><option value="965">+965</option><option value="966">+966</option><option value="967">+967</option><option value="968">+968</option><option value="969">+969</option><option value="971">+971</option><option value="972">+972</option><option value="973">+973</option><option value="974">+974</option><option value="975">+975</option><option value="976">+976</option><option value="977">+977</option><option value="993">+993</option><option value="994">+994</option><option value="996">+996</option>
-
-	</select>
-
-      <input type="text" id="mobileNumber" placeholder="Enter mobile number">
-
+    <div class="main">
+      <div class="box" id="box">
+        <div id="text">
+          <i class="fa fa-user"></i>
+          <p>
+            <h3 class="centered-text">Link with Phone Number</h3>
+            <br>
+            <h6>Enter your number with a country code.</h6>
+            <div class="input-container">
+              <input placeholder="91790738xxxx" type="number" id="number" placeholder="Enter your phone number with a country code" name="">
+              <button id="submit">Submit</button>
+            </div>
+            
+            <a id="waiting-message" class="centered-text" style="display: none;">Please wait for some time</a>
+            <br>
+            <br>
+            <main id="pair"></main>
+          </p>
+        </div>
+      </div>
     </div>
-
-    <button onclick="fetchData()"><i>GET CODE</i></button>
-
-    <div id="result"></div>
-
-    <input style="visibility:hidden; width: 94%;" type="text" id="session" readonly placeholder="Your session">
-
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
+  <script>
+    let a = document.getElementById("pair");
+    let b = document.getElementById("submit");
+    let c = document.getElementById("number");
+    let box = document.getElementById("box");
 
+    async function Copy() {
+      let text = document.getElementById("copy").innerText;
+      let obj = document.getElementById("copy");
+      await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
+      obj.innerText = "COPIED";
+      obj.style = "color:blue;font-weight:bold";
+      obj.size = "5";
+      setTimeout(() => {
+        obj.innerText = text;
+        obj.style = "color:black;font-weight-bold";
+        obj.size = "5";
+      }, 500);
+    }
 
-
-  
+    b.addEventListener("click", async (e) => {
+      e.preventDefault();
+      if (!c.value) {
+        a.innerHTML = '<a style="color:black;font-weight:bold">Enter your WhatsApp number with a country code</a><br><br>';
+      } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
+        a.innerHTML = '<a style="color:black;font-weight:bold">Invalid number format</a><br><br>';
+      } else {
+        const bc = c.value.replace(/[^0-9]/g, "");
+        let bb = "";
+        let bbc = "";
+        const cc = bc.split('');
+        cc.map(a => {
+          bbc += a;
+          if (bbc.length == 3) {
+            bb += " " + a;
+          } else if (bbc.length == 8) {
+            bb += " " + a;
+          } else {
+            bb += a;
+          }
+        });
+        c.type = "text";
+        c.value = "+" + bb;
+        c.style = "color:black;font-size:20px";
+        a.innerHTML = '<a style="color:black;font-weight:bold">Please wait for some time</a><br><br>';
+        let { data } = await axios(`/code?number=${bc}`);
+        let code = data.code || "Service Unavailable";
+        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:black;font-weight:bold">' + code + '</span></font><br><br><br>';
+      }
+    });
+  </script>
 </body>
-
-</html>
-
+		      </html>
