--- a/public/index.html
+++ b/public/index.html
@@ -343,7 +343,7 @@
       <button onclick="location.href='/update-session'" class="button">Update Session</button>
     </div>
     <footer>
-       <p>GOD-ZENITSU/</p>
+       <p>© 2024 GODZENITSU. All rights reserved</p>
     </footer>
   </body>
   </html>
