--- a/public/qr.html
+++ b/public/qr.html
@@ -36,7 +36,7 @@
             margin: 0;
             padding: 0;
             font-family: "Outfit";
-            background: linear-gradient(-45deg, #4a90e2, #3ac569, #9b59b6, #e74c3c);
+            background: linear-gradient(-45deg, #9b59b6, #3ac569, #9b59b6, #9b59b6);
             background-size: 400% 400%;
             animation: gradient 10s ease infinite;
             display: flex;
@@ -60,7 +60,7 @@
 
         jsl.code {
             overflow: hidden;
-            background: linear-gradient(-45deg, #f1c40f, #3498db, #2ecc71, #e74c3c);
+            background: linear-gradient(-45deg, #9b59b6, #3498db, #2ecc71, #9b59b6);
             background-size: 400% 400%;
             animation: gradient 8s ease infinite;
             display: flex;
@@ -164,7 +164,7 @@
             <img id="qr-image" src="/qr-code" alt="QR CODE">
         </div>
         <div id="title-container">
-            <h2 id="main">-NEZUKO-WHATSAPP-BOT QR</h2>
+            <h2 id="main">NEZUKO-WHATSAPP-BOT QR</h2>
             <p class="legend" id="legend">Scan The QR Code</p>
         </div>
         <div id="description-container">
