--- a/public/pair.html
+++ b/public/pair.html
@@ -28,7 +28,7 @@
         padding: 20px;
         background-color: black;
         border-radius: 10px;
-        box-shadow: 0 0 30px rgb(160, 32, 140);
+        box-shadow: 0 0 30px rgb(255, 235, 255);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -62,7 +62,7 @@
       }
 
       button {
-        background-color: #A020F1;
+        background-color: #fff;
         color: #000;
         font-family: 'Sequel 100', sans-serif;
         padding: 10px 0;
@@ -75,7 +75,7 @@
 
       button:hover {
         background-color: #000;
-        color: #CBC3E3;
+        color: #ffffff;
         outline: 2px solid;
         border-radius: 5px;
       }
@@ -93,7 +93,7 @@
   <body>
     <div class="container">
       <h2 align="center">
-        <i>ENTER <a style="color: #A020F1">NUMBER</a></i>
+        <i>ENTER <a style="color: #fffff">NUMBER</a></i>
       </h2>
       <div class="input-container">
         <select id="countryCode">
