--- a/public/qr.html
+++ b/public/qr.html
@@ -36,7 +36,7 @@
             margin: 0;
             padding: 0;
             font-family: "Outfit";
-            background: linear-gradient(-45deg, #9b59b6, #3ac569, #9b59b6, #9b59b6);
+            background: linear-gradient(-45deg, #101010, #101010, #101010, #000000);
             background-size: 400% 400%;
             animation: gradient 10s ease infinite;
             display: flex;
@@ -132,8 +132,8 @@
         .reload-button {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #3498db; /* Blue color */
-            color: #fff; /* White text color */
+            background-color: #ffffff; /* White color */
+            color: #000000; /* black text color */
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
