--- a/public/pair.html
+++ b/public/pair.html
@@ -11,8 +11,8 @@
         font-weight: bold;
       }
       body {
-        background-color: black;
-        color: #fff;
+        background-color: #101010;
+        color: #ffffff;
         overflow: hidden;
         font-family: 'Sequel 100', sans-serif;
         display: flex;
@@ -27,8 +27,9 @@
         max-width: 400px;
         padding: 20px;
         background-color: black;
-        border-radius: 10px;
-        box-shadow: 0 0 30px rgb(255, 235, 255);
+        border-radius: 20px;
+        box-shadow: 0 0 30px rgb(0, 0, 0);
+        border: #ffffff
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -43,7 +44,8 @@
 
       select {
         padding: 10px;
-        border: none;
+        border: infinite;
+        border-colour: #ffffff
         border-radius: 5px;
         background-color: #333;
         color: #fff;
