--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>QUEEN NEZUKO</title>
-    <link rel="icon" href="https://i.imgur.com/imOAWEN.jpeg" type="image/png">
+    <title>IZUMI XD</title>
+    <link rel="icon" href="https://i.imgur.com/R8ujokv.jpeg" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
@@ -107,7 +107,7 @@
     </style>
 </head>
 <body>
-    <h1 class="large-title">NEZUKO</h1>
+    <h1 class="large-title">IZUMI</h1>
     <h2 style="font-family: 'thunder',sans-serif; font-weight: 140; opacity: 0; animation: fadeIn 2s ease 0.5s forwards;">How do you want to pair?</h2>
     <div class="button-container">
         <button type="button" onclick="window.location ='/qr'" class="shadow__btn">Via Qr</button>
