--- a/public/qr.html
+++ b/public/qr.html
@@ -4,7 +4,7 @@
             crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEZUKO MD QR SCAN</title>
+    <title>IZUMI QR SCAN</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap" rel="stylesheet">
     <title>QR</title>
     <style>
