--- a/public/qr.html
+++ b/public/qr.html
@@ -164,7 +164,7 @@
             <img id="qr-image" src="/qr-code" alt="QR CODE">
         </div>
         <div id="title-container">
-            <h2 id="main">NEZUKO-WHATSAPP-BOT QR</h2>
+            <h2 id="main">IZUMI-WHATSAPP-BOT QR</h2>
             <p class="legend" id="legend">Scan The QR Code</p>
         </div>
         <div id="description-container">
