--- a/public/pair.html
+++ b/public/pair.html
@@ -154,6 +154,7 @@
           <option value="222">+222</option>
           <option value="223">+223</option>
           <option value="224">+224</option>
+          <option value="225">+225</option>
           <option value="226">+226</option>
           <option value="227">+227</option>
           <option value="228">+228</option>
@@ -178,6 +179,7 @@
           <option value="252">+252</option>
           <option value="253">+253</option>
           <option value="254">+254</option>
+          <option value="255">+255</option>
           <option value="256">+256</option>
           <option value="257">+257</option>
           <option value="258">+258</option>
