--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,8 @@
     <h2 style="font-family: 'thunder',sans-serif; font-weight: 140; opacity: 0; animation: fadeIn 2s ease 0.5s forwards;">How do you want to pair?</h2>
     <div class="button-container">
         <button type="button" onclick="window.location ='https://kish-web-qr.onrender.com/'" class="shadow__btn">Via Qr</button>
-        <button type="button" onclick="window.location ='https://kish-md-pairing.onrender.com/pair'" class="shadow__btn">Via Pair</button>
+        <button type="button" onclick="window.location ='https://toge-md-web.onrender.com/'" class="shadow__btn">Via Pair1</button>
+        <button type="button" onclick="window.location ='https://kish-md-pairing.onrender.com/pair'" class="shadow__btn">Via Pair2</button>   
       </form>
         </div>
         <div class="seemore-container">
