--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TOGE-MD-V3</title>
-    <link rel="icon" href="https://i.imgur.com/R8ujokv.jpeg" type="image/png">
+    <title>TOGE</title>
+    <link rel="icon" href="https://telegra.ph/file/1bc71545b84946c0d4b5c.jpg" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
@@ -107,12 +107,11 @@
     </style>
 </head>
 <body>
-    <h1 class="large-title">TOGE V3</h1>
+    <h1 class="large-title">TOGE</h1>
     <h2 style="font-family: 'thunder',sans-serif; font-weight: 140; opacity: 0; animation: fadeIn 2s ease 0.5s forwards;">How do you want to pair?</h2>
     <div class="button-container">
-        <button type="button" onclick="window.location ='https://kish-web-qr.onrender.com/'" class="shadow__btn">Via Qr</button>
-        <button type="button" onclick="window.location ='https://toge-md-web.onrender.com/'" class="shadow__btn">Via Pair1</button>
-        <button type="button" onclick="window.location ='https://kish-md-pairing.onrender.com/pair'" class="shadow__btn">Via Pair2</button>   
+        <button type="button" onclick="window.location ='/qr'" class="shadow__btn">Via Qr</button>
+        <button type="button" onclick="window.location ='/pair'" class="shadow__btn">Via Pair</button>   
       </form>
         </div>
         <div class="seemore-container">
