--- a/public/pair.html
+++ b/public/pair.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> IZUMI PAIRING CODE</title>
+    <title> TOGE PAIR CODE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <link rel="icon" href="favicons/QyfhhwM.png" type="image/png" />
     <style>
@@ -99,7 +99,7 @@
       </h2>
       <div class="input-container">
         <select id="countryCode">
-          <option value="91">+91</option>
+          <option value="241">+241</option>
           <option value="1">+1</option>
           <option value="7">+7</option>
           <option value="20">+20</option>
@@ -141,6 +141,7 @@
           <option value="84">+84</option>
           <option value="86">+86</option>
           <option value="90">+90</option>
+          <option value="91">+91</option>
           <option value="92">+92</option>
           <option value="94">+94</option>
           <option value="95">+95</option>
@@ -168,7 +169,6 @@
           <option value="238">+238</option>
           <option value="239">+239</option>
           <option value="240">+240</option>
-          <option value="241">+241</option>
           <option value="242">+242</option>
           <option value="244">+244</option>
           <option value="245">+245</option>
